# mle-training

./: .flake8  .gitignore  README.md  env.yml  housing_price_prediction.py  pyproject.toml  requirements.txt  run_pipeline.sh
House_Price_Prediction.egg-info/: PKG-INFO  requires.txt
Notebooks/: housing_price_prediction.ipynb
deploy/docker/: Dockerfile
src/house_price_predictor/: __init__.py  ingest_data.py  logger.py  score.py  train.py
src/house_price_predictor/configs/: logging_config.yaml
