[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
float_to_top = true

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "house_price_predictor"
version = "0.0.1"
description = "Predict house price"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn==1.5.1",
    "pyyaml"
]

[tool.setuptools.packages.find]
where = ["src"]